@@ -1,3 +1,5 @@
+* Bug Fix: Fix an bug where `nil` in a string field would cause a 500 error.
+
 New in 0.0.11:
 
 * Improvement: Add `Administrate::Field::Boolean` for displaying boolean data.
